# dh-toolbox

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
adversaries/: apps.py  models.py
data/: adversaries.tsv
dh_toolbox/: settings.py  urls.py
src/: manage.py
src/accounts/: admin.py  services.py
src/adversaries/: admin.py  dto.py  models.py  selectors.py  services.py  views.py
src/adversaries/dtos/: dto.py  dto_patch.py
src/adversaries/helpers/: formatting.py  normalizers.py  sentinel.py
src/adversaries/migrations/: 0001_initial.py  0002_alter_adversary_atk_bonus_and_more.py  0003_remove_adversary_unique_author_name_and_more.py
src/adversaries/scripts/: tsv_parser.py
src/adversaries/serializers/: read.py
src/api/: urls.py
src/api/v1/: root.py  urls.py
src/api/v2/: urls.py
src/backend/: manage.py
src/backend/adversaries/: admin.py  dto.py  forms.py  models.py  serializers.py  services.py  views.py
src/backend/dh_toolbox/: asgi.py  settings.py  urls.py  wsgi.py
src/config/: asgi.py  urls.py  wsgi.py
src/config/settings/: __init__.py  base.py  local.py  production.py  testing.py
src/custom_user/: admin.py
src/custom_user/migrations/: 0001_initial.py
src/dh_toolbox/: settings.py
src/web/: urls.py
src/web/accounts/: forms.py  urls.py
src/web/core/: urls.py  views.py
tests/: conftest.py
tests/test_accounts/test_integration/: test_services.py
tests/test_adversaries/: conftest.py  test_models.py  test_service.py
tests/test_adversaries/test_integration/: conftest.py  (+4 more)
tests/test_api/: conftest.py
(+37 files in other folders)
