[project]
name = "dh-toolbox"
version = "0.1.0"
description = "Collection of apps to help DM prepare Daggerheart games."
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "dh_toolbox.settings"
pythonpath = "src"
testpaths = "tests"
