[project]
name = "dh-toolbox"
version = "0.1.0"
description = "Collection of apps to help DM prepare Daggerheart games."
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-env>=1.2.0",
    "ruff>=0.14.1",
]

[tool.pytest_env]
ENV_NAME = "testing"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = "./src"
testpaths = "./tests"

[tool.coverage.run]
branch = true
source = [
    "./src",
]
omit = [
    "/scripts/*",
    "manage.py",
    "wsgi.py",
    "asgi.py",
    "urls.py",
    "/migrations/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true
fail_under = 50
